# rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-eval.txt  requirements-ingest.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml
app/: config.py  main.py  rag_pipeline.py
app/security/: dependencies.py  jwt.py  principal.py
app/utils/: artifacts.py  db_ingestors.py  doc_utils.py  docs.py  loaders.py  opensearch.py  paths.py  prompts.py  text.py  url_utils.py  vector_stores.py
artifacts/: README.md
data/: README.md
evaluation/: eval_dataset.json  langsmith_eval.py  local_eval.py  populate_dataset.py  results.csv  tets.py
evaluation/datasets/: dataset_2025-11-09_20-51-15.jsonl  eval_dataset.json  manifest_2025-11-09_20-51-15.json
evaluation/runs/: manifest_2025-11-09_21-49-12  manifest_2025-11-11_22-56-53
evaluation/scripts/: langsmith_eval.py  populate_dataset.py
frontend/nextjs-app/: README.md  package-lock.json  (+1 more)
ingestion/: ingest.py  pdf_ingestor.py  upload_src_files_to_s3.py  web_ingestor.py
prompts/: answer_generation_v1.txt  query_analysis_v1.txt
scripts/: create_opensearch_index_from_local.py  ingest.py  update_vectorstores.py  update_vs.py  upload_src_files_to_s3.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_artifacts.py  test_config.py  test_doc_processing.py  test_docs.py  test_hello.py  test_main.py  test_rag_pipeline.py  test_text.py  test_urls.py  test_utils.py  test_vector_stores.py
(+30 files in other folders)
