[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--disable-warnings",
    "--tb=short",
    "-ra",
    "-m",
    "not exclude_from_default"
]

# markers = [
#     "unit: Unit tests",
#     "integration: Integration tests",
#     "slow: Slow running tests",
#     "api: API tests",
#     "utils: Utility function tests",
#     "pipeline: RAG pipeline tests"
# ]

markers = [
    "exclude_from_default: Tests that should not run by default"
]

minversion = "6.0"
timeout = 300

norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "__pycache__",
    ".pytest_cache",
    "local"
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
